--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
             font-family: 'Nexa', sans-serif;
         }
 
+        /* Estilo para los íconos de correo electrónico e Instagram */
+        .header-icons {
+            display: flex;
+            align-items: center;
+            margin-right: 20px;
+        }
+
+        .envelope-icon,
+        .instagram-icon {
+            color: #00a4a3; /* Cambia el color de los íconos a #00a4a3 */
+            margin-left: 10px; /* Agrega margen izquierdo entre los íconos */
+        }
+
         header {
             background-color: white;
             display: flex;
@@ -57,31 +70,31 @@
         }
 
         #banner-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+        }
 
-#banner h1 {
-    margin: 10px 0;
-    color: White;
-    font-weight: 600;
-    font-size: 3rem;
-}
+        #banner h1 {
+            margin: 10px 0;
+            color: White;
+            font-weight: 600;
+            font-size: 3rem;
+        }
 
-#banner h2 {
-    margin: 10px 0;
-    color: White;
-    font-weight: 400;
-    font-size: 1.5rem;
-}
-#banner p {
-    font-weight: 400;
-    font-size: 1.3rem;
-    color: White;
-}
+        #banner h2 {
+            margin: 10px 0;
+            color: White;
+            font-weight: 400;
+            font-size: 1.5rem;
+        }
+        #banner p {
+            font-weight: 400;
+            font-size: 1.3rem;
+            color: White;
+        }
 
         #features {
         background-color: white;
@@ -180,7 +193,7 @@
             cursor: pointer;
             border-radius: 5px;
             background-color: #fd7d2c;
-            margin-bottom: 60px;
+            margin-bottom: 40px;
         }
 
         .image-link img {
@@ -234,6 +247,30 @@
         }
 
      @media screen and (max-width: 768px) {
+        #header-contact {
+            display: flex;
+            align-items: center;
+            margin-right: 20px; /* Agrega un margen a la derecha para separar del logo */
+        }
+
+        #header-contact a {
+            font-size: 14px; /* Ajusta el tamaño del texto */
+            margin-left: 10px; /* Agrega margen izquierdo entre los elementos */
+        }
+
+        .header-icons {
+            flex-direction: column; /* Coloca los íconos uno debajo del otro */
+            align-items: flex-end; /* Alinea los íconos a la derecha */
+            margin-right: 0; /* Elimina el margen derecho en pantallas pequeñas */
+            margin-top: 10px; /* Agrega margen superior entre el logo y los íconos */
+        }
+
+        .envelope-icon,
+        .instagram-icon {
+            margin-left: 0; /* Elimina el margen izquierdo en pantallas pequeñas */
+            margin-bottom: 5px; /* Agrega margen inferior entre los íconos */
+        }
+
         #features {
             flex-direction: column; /* Cambia la dirección de flexión en pantallas más pequeñas */
         }
@@ -290,6 +327,14 @@
 <body>
     <header>
             <img src="img/LogoDescrubre.png" alt="DescubreDo Logo" id="logo">
+            <div id="header-contact" class="header-icons">
+                <a href="mailto:hola@descubre.do" style="text-decoration: none; color: #FD7D2C;">
+                    <i class="far fa-envelope envelope-icon"></i> hola@descubre.do
+                </a>
+                <a href="https://www.instagram.com/descubre.do/" target="_blank" style="text-decoration: none; color: #FD7D2C;">
+                    <i class="fab fa-instagram instagram-icon"></i> descubre.do
+                </a>
+            </div>
     </header>
 
     <div id="banner">
@@ -297,7 +342,7 @@
        <!-- <div id="banner-overlay"></div> Aquí agregamos el div de superposición -->
         <div id="banner-content">
             <h1>¡AQUÍ INICIA LA <span id="typed-word"></span>!</h1>
-            <p>Descubre <b>DO</b> es tu boleto para explorar, disfrutar y crear recuerdos inolvidables en la República Dominicana. Miles de lugares, actividades y experiencias esperan por ti.</p>
+            <p><b>Descubre DO</b> es tu boleto para explorar, disfrutar y crear recuerdos inolvidables en la República Dominicana. Miles de lugares, actividades y experiencias esperan por ti.</p>
             <h2><b>¿Listo para vivir una emocionante travesía?</b></h2>
             <div class="arrow-animation">
                 <div class="arrow"></div>
@@ -307,9 +352,9 @@
 
     <div id="features">
         <div id="features-div">
-            <h3 id="feature_title">¡Tenemos un regalo especial para ti!</h3>
-            <p>Suscríbete a nuestra lista y participa para ganar 2 boletas para ti y un acompañante, para disfrutar una noche de drama y comedia en Microteatro Santo Domingo.</p>
-            <p>Solo tienes que dejarnos tus datos, seguir nuestra cuenta de Instagram @descubre.do, ¡y listo! Ya estás participando.</p>
+            <h3 id="feature_title">¿QUIERES SABER MÁS?</h3>
+            <p>Suscribete y obtendras actualizaciones de actividades semanales, Suscribirse es fácil. Simplemente ingresa tu dirección de correo electrónico en el formulario de suscripción.</p>
+            <p>¡Y eso es todo! A partir de ahora, recibirás nuestras actualizaciones semanales directamente en tu bandeja de entrada. <a href="politica.html" target="_blank" style="color: #00a4a3;"> Política de Privacidad</a></p>
         </div>
             <!-- Aquí puedes agregar los campos del formulario -->
             <!-- Mailchimp -->
@@ -381,13 +426,40 @@
     </div>
     <br style="background-color: #FD7D2C;">
     <div id="acordeones" style="background-color: #fd7d2c;">
-        <h2 style="text-align: center; font-size: 50px; margin-bottom: 20px; color: #FFF;">Informaciones</h2>
+        <h2 style="text-align: center; font-size: 50px; margin-bottom: 20px; color: #FFF;">DESCÚBRELO TODO</h2>
         <div class="acordeon">
-            <h2 style="color: #FFF;">Concurso 2023 <span class="acordeon-icon">+</span></h2>
+            <h2 style="color: #FFF;">Eventos <span class="acordeon-icon">+</span></h2>
             <div class="contenido">
                 <!-- Información del concurso -->
-                <p>Anunciaremos el ganador vía correo electrónico, el próximo martes 22 de agosto del 2023. ¡Así que quédate bien pendiente!</p>
-                <p>Este concurso es concebido y gestionado de manera exclusiva por el equipo de Descubre DO, por lo tanto, Microteatro no asume responsabilidad alguna respecto a la mecánica, elección de los ganadores ni coordinación logística de la entrega de las boletas.</p>
+                <p>Conciertos, talleres, conferencias, festivales. Todo lo que viene próximamente y que no te puedes perder.</p>
+            </div>
+        </div>
+        <div class="acordeon">
+            <h2 style="color: #FFF;">Gastronomía <span class="acordeon-icon">+</span></h2>
+            <div class="contenido">
+                <!-- Información del concurso -->
+                <p>Lugares para disfrutar tu tipo de comida preferida, o para descubrir nuevos horizontes gastronómicos. ¡Atrévete a explorarlos!</p>
+            </div>
+        </div>
+        <div class="acordeon">
+            <h2 style="color: #FFF;">Turismo <span class="acordeon-icon">+</span></h2>
+            <div class="contenido">
+                <!-- Información del concurso -->
+                <p>Nuestro hermoso país tiene demasiado para conocer. Nosotros te ayudamos a descubrir los destinos que definitivamente deben estar en tu lista.</p>
+            </div>
+        </div>
+        <div class="acordeon">
+            <h2 style="color: #FFF;">Cultura <span class="acordeon-icon">+</span></h2>
+            <div class="contenido">
+                <!-- Información del concurso -->
+                <p>Conocer más nuestras raíces y seguir educándonos, ¡no tiene por qué ser aburrido! Te mostramos cientos de actividades interesantes y divertidas que resaltan nuestra dominicanidad. </p>
+            </div>
+        </div>
+        <div class="acordeon">
+            <h2 style="color: #FFF;">Vida Nocturna <span class="acordeon-icon">+</span></h2>
+            <div class="contenido">
+                <!-- Información del concurso -->
+                <p>¡Llega la noche y se vale una merecida salida! Descubre lugares y actividades que harán de tu noche toda una experiencia de disfrute antiestrés.</p>
             </div>
         </div>
         <div class="acordeon">
