--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                             <div id="mce-responses" class="clear">
                                 <div class="response" id="mce-error-response" style="display: none;"></div>
                                 <div class="response" id="mce-success-response" style="display: none;"></div>
-                            </div><div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text" name="b_32fde870efc72f05d1da03c9c_5c1633c6fb" tabindex="-1" value=""></div><div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe"></div>
+                            </div><div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text" name="b_32fde870efc72f05d1da03c9c_5c1633c6fb" tabindex="-1" value=""></div><div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribirse"></div>
                         </div>
                     </form>
                 </div>
@@ -354,7 +354,7 @@
                 <p>Conciertos, talleres, conferencias, festivales. Todo lo que viene próximamente y que no te puedes perder.</p>
             </div>
             <div class="tarjeta tarjeta-overlay">
-                <img src="img/Gastronomia.svg" alt="Eventos Icon" class="tarjeta-icon">
+                <img src="img/Gastronomía.svg" alt="Eventos Icon" class="tarjeta-icon">
                 <h2>Gastronomía</h2>
                 <p>Lugares para disfrutar tu tipo de comida preferida, o para descubrir nuevos horizontes gastronómicos. ¡Atrévete a explorarlos!</p>
             </div>
