--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('img/Banner.png');
+            background-image: url('img/BANNER001.png');
             background-size: cover;
             background-position: center;
-            filter: brightness(0.7); /* Ajusta la opacidad de la imagen de fondo */
+            filter: brightness(0.8); /* Ajusta la opacidad de la imagen de fondo */
         }
 
         #main-content {
