--- a/nosotros.html
+++ b/nosotros.html
@@ -13,8 +13,10 @@
         }
 
         embed {
-            width: 100vw;
-            height: 100vh;
+            max-width: 100%;
+            max-height: 100%;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
