--- a/nosotros.html
+++ b/nosotros.html
@@ -20,45 +20,8 @@
 </head>
 <body>
 
-    <div id="pdfViewer"></div>
 
-    <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
-    <script>
-        // Load PDF.js
-        const pdfjsLib = window['pdfjs-dist/build/pdf'];
-
-        // Path to your PDF file
-        const pdfPath = 'pdf/presentacion.pdf';
-
-        // Specify container for the PDF viewer
-        const container = document.getElementById('pdfViewer');
-
-        // Load the PDF file
-        pdfjsLib.getDocument(pdfPath).promise.then(pdfDoc => {
-            // Loop through each page and render it
-            for (let pageNum = 1; pageNum <= pdfDoc.numPages; pageNum++) {
-                pdfDoc.getPage(pageNum).then(page => {
-                    const scale = 1.5;
-                    const viewport = page.getViewport({ scale });
-
-                    const canvas = document.createElement('canvas');
-                    const context = canvas.getContext('2d');
-
-                    canvas.height = viewport.height;
-                    canvas.width = viewport.width;
-
-                    const renderContext = {
-                        canvasContext: context,
-                        viewport: viewport
-                    };
-
-                    container.appendChild(canvas);
-
-                    page.render(renderContext);
-                });
-            }
-        });
-    </script>
+    <iframe id="pdfViewer" src="pdf/presentacion.pdf" width="100%" height="100%" style="border: none;"></iframe>
 
 </body>
 </html>
